--- a/src/style.css
+++ b/src/style.css
@@ -9,12 +9,16 @@
     margin: 0;
     background: #333;
     color: #fff;
-    cursor: none;
     overflow: hidden;
   }
   
   #root {
-    position: relative;
-    width: 100%;
-    height: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 1vh;
+    font-size: 10vh;
+  }
+
+  p {
+      margin: .2em;
   }
